@@ -81,7 +81,7 @@ let ident_global_exist id =
     global env) with base [id]. *)
 let next_ident_fresh (id:Id.t) =
     let res = ref id in
-    while ident_global_exist !res do res := Nameops.lift_subscript !res done;
+    while ident_global_exist !res do res := Nameops.increment_subscript !res done;
     !res
 
 
